# ai-gettext-translator

./: Cargo.toml  LICENSE  README.md
src/: inline.rs  logger.rs  main.rs  openai.rs  translator.rs
