[package]
name = "ai_gettext_translator"
authors = ["Jorge Gonzalez Cardelus <jgcardelus@gmail.com>"]
description = "A command-line tool that uses OpenAI’s models to automatically translate `gettext` messages in source code and `.po` files. Thought for Phoenix projects."
license = "MIT"
version = "0.1.1"
edition = "2024"

[dependencies]
regex = "1"
walkdir = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0.97"
colored = "3.0.0"
chrono = "0.4.40"
